compile with maven